Worked on trying to get the menu looking nice - but did not finish. Also worked on fixing the amount of white space in my code

--- a/aboutLaxStyle.css
+++ b/aboutLaxStyle.css
@@ -1,6 +1,7 @@
 body {
   background-color: black;
 }
+
 h1 {
   color: blue;
   font family: verdana;
@@ -11,6 +12,7 @@ h1 {
   font-size: 600%;
   text-align: center;
 }
+
 h2 {
   color: blue;
   font family: verdana;
@@ -58,7 +60,6 @@ p {
   margin: 50px;
   padding: 0px;
   font-size: 150%;
-
 }
 
 td {
@@ -70,7 +71,6 @@ td {
   font-size: 150%;
   border: 1px solid white;
   border-collapse: collapse;
-
 }
 
 table {
@@ -94,8 +94,6 @@ th {
   font-size: 150%;
   border: 1px solid white;
   border-collapse: collapse;
-
-
 }
 
 blockquote {
@@ -129,6 +127,7 @@ a:link{
   margin: 50px;
   padding: 30px;
   font-size: 150%;
+  text-decoration: none;
 }
 
 a:visited{
@@ -137,6 +136,7 @@ a:visited{
   margin: 50px;
   padding: 30px;
   font-size: 150%;
+  text-decoration: none;
 }
 
 a:hover {
@@ -145,6 +145,7 @@ a:hover {
   margin: 50px;
   padding: 30px;
   font-size: 150%;
+  text-decoration: none;
 }
 
 img {
